objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACLS_Age__c</fullName>
        <formula>IF( (NOT( ISBLANK( PC_Date_of_Birth__c)) &amp;&amp; NOT( PC_Date_of_Birth__c &gt;TODAY())) , TEXT(IF( NOT( ISBLANK( PC_Date_of_Birth__c) ) ,
IF( DATE( 2000 , MONTH( PC_Date_of_Birth__c) , DAY( PC_Date_of_Birth__c) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( PC_Date_of_Birth__c),
YEAR (Today()) - YEAR ( PC_Date_of_Birth__c) -1 ),
null))+ &apos; Years &apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Caregiver_Email__c</fullName>
        <label>Caregiver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACLS_Caregiver_Phone__c</fullName>
        <label>Caregiver Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ACLS_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Caregivers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Unique_Id__c</fullName>
        <displayFormat>P-{00000}</displayFormat>
        <label>Unique Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Healthcare plan for this patient</description>
        <inlineHelpText>Healthcare plan for this patient</inlineHelpText>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PatientAccounts</relationshipLabel>
        <relationshipName>PatientAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EnrollmentType__c</fullName>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>NonDual</fullName>
                    <default>true</default>
                    <label>NonDual</label>
                </value>
                <value>
                    <fullName>FBDual</fullName>
                </value>
                <value>
                    <fullName>PBDual</fullName>
                </value>
                <value>
                    <fullName>ESRD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID that relates this individual&apos;s account record to its contact record.</description>
        <label>Individual ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is in a institution.</description>
        <inlineHelpText>Indicates whether a patient is in a institution.</inlineHelpText>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LowIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient falls within low income guidelines.</description>
        <inlineHelpText>Indicates whether a patient falls within low income guidelines.</inlineHelpText>
        <label>Low Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicaidEligibilityStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is eligible for medicaid.</description>
        <inlineHelpText>Indicates whether a patient is eligible for medicaid.</inlineHelpText>
        <label>Medicaid Eligibility Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicareEnrollee__c</fullName>
        <description>New member or continued from previous year.</description>
        <inlineHelpText>New member or continued from previous year.</inlineHelpText>
        <label>Medicare Enrollee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Enrollee</fullName>
                </value>
                <value>
                    <fullName>Continued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OREC__c</fullName>
        <description>Original Reason for Medicare Entitlement</description>
        <label>OREC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PayerType__c</fullName>
        <label>Payer Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>Unique external id</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaxId__c</fullName>
        <label>TaxId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Additional_Permission__c</fullName>
        <label>Additional Permission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>View Patient First Name and Last Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Details__c</fullName>
        <description>The details about the patient’s caregiver.</description>
        <label>Caregiver Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_First_Name__c</fullName>
        <description>The first name of the patient’s caregiver.</description>
        <label>Caregiver First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Last_Name__c</fullName>
        <description>The last name of the patient’s caregiver.</description>
        <label>Caregiver Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Relationship_to_Patient__c</fullName>
        <description>The caregiver’s relationship to the patient such as Self, Spouse, Child, Father, Mother, Domestic Partner, Guardian, and Other.</description>
        <label>Caregiver Relationship to Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Salutation__c</fullName>
        <description>The caregiver’s salutation such a Mr., Ms., Mrs., and Dr.</description>
        <label>Caregiver Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Salutation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Communication_Language__c</fullName>
        <description>The patient’s preferred communication language such as English, French, and Spanish.</description>
        <label>Communication Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Country__c</fullName>
        <description>The country name associated with account’s primary address.</description>
        <formula>TEXT(PC_Primary_Address__r.PC_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Date_of_Birth__c</fullName>
        <description>The date of birth of the patient</description>
        <inlineHelpText>Patient&apos;s date of birth</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Display_on_Map__c</fullName>
        <description>The account’s primary address that can be used to display on the maps.</description>
        <formula>AND( NOT(ISBLANK(TEXT(Type))), CONTAINS($Label.PC_Map_Display_Account_Types, TEXT( Type) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display on Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Email__c</fullName>
        <description>The email address of the account.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_External_ID__c</fullName>
        <description>This field is used to store any external reference IDs.</description>
        <inlineHelpText>External reference ID</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Features__c</fullName>
        <description>Description of account features</description>
        <label>Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elevator</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Ramp</fullName>
                </value>
                <value>
                    <fullName>Stairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_First_Name__c</fullName>
        <description>The first name of the account holder.</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Gender__c</fullName>
        <description>The gender of the patient.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Geolocation__c</fullName>
        <description>The geolocation latitude value of account’s primary address is stored in this field.</description>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PC_Hours__c</fullName>
        <description>Hours of operation / business hours / availability</description>
        <label>Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Individual_Type__c</fullName>
        <description>Whether Account is Individual or Business</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Initials__c</fullName>
        <description>The middle initials of the patient’s name</description>
        <label>Initials</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Language_Abbreviation__c</fullName>
        <description>The abbreviation of the patient’s preferred communication language that is populated.</description>
        <label>Language Abbreviation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_Communication_Language__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Last_Name__c</fullName>
        <description>The last name of the account holder.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Mail_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected when the pharmacy accepts referrals/prescriptions only through postal mail.</description>
        <label>Mail Only Pharmacy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Map_Image__c</fullName>
        <description>The icon displayed on the map to represent the account.</description>
        <formula>SUBSTITUTE(TEXT(Type)+ &apos;/&apos; + TEXT(PC_Sub_Type__c)+ &apos;.png&apos;, &apos; &apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_NCPDP__c</fullName>
        <description>field to hold the information of National Council for Prescription Drug Programs</description>
        <label>NCPDP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_NPI__c</fullName>
        <description>National Provider Identifier number</description>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ParentManufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the manufacturer related with the engagement program&apos;s manufacturer. This field should be used in context of Person Account</description>
        <label>Parent Account(Manufacturer)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_Man</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_PlaceOfService__c</fullName>
        <label>Place of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Preferred__c</fullName>
        <description>The preferred communication channel of the account.</description>
        <label>Preferred Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Primary_Address_1__c</fullName>
        <description>The first line of the account&apos;s primary address.</description>
        <formula>PC_Primary_Address__r.PC_Address_1__c</formula>
        <label>Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Primary_Address_2__c</fullName>
        <description>The second line of the account&apos;s primary address.</description>
        <formula>PC_Primary_Address__r.PC_Address_2__c</formula>
        <label>Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Primary_Address_3__c</fullName>
        <description>The third line of the account&apos;s primary address.</description>
        <formula>PC_Primary_Address__r.PC_Address_3__c</formula>
        <label>Address 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Primary_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup to the account’s primary address.</description>
        <label>Address</label>
        <referenceTo>PC_Address__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Primary_City__c</fullName>
        <description>The city name of the account&apos;s primary address.</description>
        <formula>PC_Primary_Address__r.PC_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Primary_State__c</fullName>
        <description>The state name of the account&apos;s primary address.</description>
        <formula>TEXT(PC_Primary_Address__r.PC_State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Primary_Zip_Code__c</fullName>
        <description>The zip code of the account&apos;s primary address.</description>
        <formula>PC_Primary_Address__r.PC_Zip_Code__c</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Salutation__c</fullName>
        <description>The salutation used for the individual.</description>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Specialist_Type__c</fullName>
        <description>The type of the physician specialist. It is dependent on the Account.Type choice &quot;Specialist&quot;.</description>
        <label>Specialist Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiologist</fullName>
                </value>
                <value>
                    <fullName>Endocrinologist</fullName>
                </value>
                <value>
                    <fullName>Gastroenterologist</fullName>
                </value>
                <value>
                    <fullName>Hepatologist</fullName>
                </value>
                <value>
                    <fullName>Neurologist</fullName>
                </value>
                <value>
                    <fullName>Oncologist</fullName>
                </value>
                <value>
                    <fullName>Orthopod</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Rheumatologist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <description>The status allows records to be classified as inactive and filters out of lookups and reports. The status is used to support validation rules for related records.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Sub_Type__c</fullName>
        <description>Used to further categorize accounts when the account type is “Business”.</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Infusion Clinic</fullName>
                </value>
                <value>
                    <fullName>Diabetes Center</fullName>
                </value>
                <value>
                    <fullName>MS Clinic</fullName>
                </value>
                <value>
                    <fullName>Hospital Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Retail Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Specialty Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Group Plan</fullName>
                </value>
                <value>
                    <fullName>Federal Plan</fullName>
                </value>
                <value>
                    <fullName>State Plan</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Eye Clinic</fullName>
                </value>
                <value>
                    <fullName>MRI Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Franchise</fullName>
        <active>true</active>
        <description>Details about the franchise</description>
        <label>Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>HCO</fullName>
        <active>true</active>
        <description>Hospital, Clinic, Long Term Care Facility or Private Practice</description>
        <label>HCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Represents a business or an organization</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesHousehold</fullName>
        <active>true</active>
        <description>Represents a Household</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Represents an Individual</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesPayer</fullName>
        <active>true</active>
        <description>Represents a Payer</description>
        <label>Payer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manufacturer</fullName>
        <active>true</active>
        <description>Details about the drug manufacturer</description>
        <label>Manufacturer</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Field_Training_Nurse</fullName>
        <active>true</active>
        <description>3rd party resourse who provides training to patients in the field</description>
        <label>Field Training Nurse</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Patient</fullName>
        <active>false</active>
        <description>Person receiving treatment and services</description>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Pharmacy</fullName>
        <active>true</active>
        <description>Retail, hospital and specialty pharmacies</description>
        <label>Pharmacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Physician</fullName>
        <active>true</active>
        <description>Medical doctor</description>
        <label>Physician</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payer</fullName>
        <active>true</active>
        <description>Organization which reimburses / funds all or part of the patient&apos;s treatment.  Includes private insurance companies and various levels of public (government) organization</description>
        <label>Payer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
</CustomObject>